# project2

./: .env.example  .gitignore  AGENTS.md  NEXT_STEPS.md  POSTGRES_SETUP.md  README.md  a100_run.sh  analyze.py  export_model.py  generate_report.py  merge_databases.py  migrate_to_postgres.py  pyproject.toml  reexport_attention.py  server_cli.py  setup.sh  sweep.py  temp.py  test_infrastructure.py  train.py  update_cluster.sh  update_cluster_final.sh
configs/: config.yaml
configs/augmentation/: light.yaml  medium.yaml  strong.yaml
configs/model/: advanced.yaml  attention.yaml  baseline.yaml  efficient.yaml  lightweight.yaml
configs/sweep/: augmentation_test.yaml  example_sweep.yaml
docs/: PROJECT_DESCRIPTION.md  README.md
infrastructure/: __init__.py  async_io.py  checkpoint.py  config.py  data.py  database.py  device.py  evaluation.py  frequency_loss.py  gpu_augmentation.py  server.py  training.py  visualization.py
models/: __init__.py  advanced_autoencoder.py  attention_autoencoder.py  baseline.py  efficient.py  lightweight_autoencoder.py  mini_attention.py
